Set fixed width and color for article paragraphs to enhance readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,8 @@ article p {
   font-size: 1.6rem;
   line-height: 1.6;
   margin-bottom: 1.5rem;
-   
+   width: 900px;
+   color: z`x`x`xx;
   }
 
 /* ============================================= */
